--- a/estilo/style.css
+++ b/estilo/style.css
@@ -94,19 +94,18 @@ section.imagem > p {
 }
 
 section#img01 {
-    background-image: url("imagens/background001.jpg");
+    background-image: url(/imagens/background001.jpg);
     background-position: right center;
     background-size: cover;
 }
 
 section#img02 {
-    background-image: url("imagens/background002.jpg");
+    background-image: url(/imagens/background002.jpg);
     
 }
 
-footer {
+footer > p {
     background-color: black;
     color: white;
-    padding: 10px;   
-    
+    text-align: center;
 }
